implimentation de la liste des joueurs avec des filtres par date et niveau
